factory image hex file pulled from the board with STM link

--- a/skr-2/Firmware/Marlin-bugfix-2.0.9.2.x/platformio.ini
+++ b/skr-2/Firmware/Marlin-bugfix-2.0.9.2.x/platformio.ini
@@ -17,7 +17,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = BIGTREE_SKR_2
+default_envs = BIGTREE_SKR_2_F429
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
@@ -271,6 +271,7 @@ monitor_flags =
   --filter
     time
 
+upload_protocol = stlink
 #
 # Just print the dependency tree
 #
